@@ -30,7 +30,7 @@ public class EmptyPatternAnalyzer extends PatternFrequencyAnalyzer {
     }
 
     @Override
-    public RecognitionResult recognize(String stringToRecognize) {
+    protected RecognitionResult recognize(String stringToRecognize) {
         RecognitionResult result = RecognitionResult.getEmptyResult();
         if (StringUtils.isEmpty(stringToRecognize)) {
             result.setResult(stringToRecognize, true);
