@@ -80,6 +80,9 @@ public class DataTypeQualityAnalyzer extends QualityAnalyzer<ValueQualityStatist
         }
     }
 
+    // TODO private List listQualityAnalyzer
+    // add method...
+
     @Override
     public boolean analyze(String... record) {
         if (record == null) {
@@ -98,12 +101,20 @@ public class DataTypeQualityAnalyzer extends QualityAnalyzer<ValueQualityStatist
             } else if (TypeInferenceUtils.isValid(types[i], value)) {
                 valueQuality.incrementValid();
             } else {
+                // while list analyzers
+                // analyzer.incrementValid or invalid...
+                // else
                 valueQuality.incrementInvalid();
                 processInvalidValue(valueQuality, value);
             }
         }
         return true;
     }
+
+    // TODO: create class CustomDatePatternAnalyzer:
+    // - CustomDatePatternAnalyzer(pattern)
+    // - method analyze() {try { DateTimeFormatter.valueOf(date, pattern) } catch {...}}
+    // - method DataType execute()
 
     private void processInvalidValue(ValueQualityStatistics valueQuality, String invalidValue) {
         if (isStoreInvalidValues) {
