@@ -4,6 +4,9 @@ V1.3.3 2015-11-4
 	- Make it possible to add customized date and time pattern	
 	- Expose setParameter method to Analyzer interface , add customized date type analyzer class and customized datetime manager class.
 	- Remove the recognition hierarchy and using analyzer interface for the pattern classes.
+		2015-11-20
+	- Make public class RecognitionResult protected & make all public methods: getValuePattern() in xxxPatternAnalyzer protected
+	- 
 V1.3.2 2015-10-29
 	- TDQ-10903 optimize dictionaries
 	- adjust OPEN/CLOSE type for some indexes
